newrelicの環境をdevelopmentに戻す

--- a/webapp/ruby/newrelic.yml
+++ b/webapp/ruby/newrelic.yml
@@ -31,14 +31,6 @@ common: &default_settings
 # Environment-specific settings are in this section.
 # RAILS_ENV or RACK_ENV (as appropriate) is used to determine the environment.
 # If your application has other named environments, configure them here.
-sainu:
+development:
   <<: *default_settings
-  app_name: isucari (sainu)
-
-tsugitta:
-  <<: *default_settings
-  app_name: isucari (tsugitta)
-
-yamamu:
-  <<: *default_settings
-  app_name: isucari (yamamu)
+  app_name: isucari (Development)
