Bcrypt が遅いので SHA256 を使うようにする

--- a/webapp/ruby/docker-compose.yml
+++ b/webapp/ruby/docker-compose.yml
@@ -31,5 +31,6 @@ services:
       - ./docker/db/my.cnf:/etc/mysql/conf.d/my.cnf
       - ./docker/db/sql:/docker-entrypoint-initdb.d
       - ../sql:/sql
+      - ./migrations:/migrations
     ports:
       - 3306:3306
